criando endpoints de simulacao
