# src/main/java/com/simuladorcredito/controller/SimulacaoCreditoControllerImpl.java
@@ -1,5 +1,7 @@
 package com.simuladorcredito.controller;
 
+import com.simuladorcredito.model.SimulacaoRequest;
+import com.simuladorcredito.service.SimulacaoClienteService;
 import com.simuladorcredito.service.SimulacaoCreditoService;
 import lombok.RequiredArgsConstructor;
 import org.openapitools.api.SimulacaoApi;
@@ -10,6 +12,7 @@ import org.springframework.web.bind.annotation.RestController;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
+import java.util.List;
 
 
 @RestController
@@ -18,9 +21,26 @@ public class SimulacaoCreditoControllerImpl implements SimulacaoApi {
 
     private final SimulacaoCreditoService simulacaoCreditoService;
 
+    private final SimulacaoClienteService simulacaoClienteService;
+
     @Override
-    public ResponseEntity<SimulacaoEmprestimoResponse> getSimulacaoEmprestimo(BigDecimal valorEmprestimo, LocalDate dataNascimento, Integer qtdParcelas) {
-        var simulacao = simulacaoCreditoService.gerarSimulacao(valorEmprestimo, dataNascimento, qtdParcelas);
-        return ResponseEntity.ok(simulacao);
+    public ResponseEntity<SimulacaoEmprestimoResponse> getSimulacaoEmprestimo(String cpf, String email, BigDecimal valorEmprestimo, LocalDate dataNascimento, Integer qtdParcelas) {
+        var dadosSimulacao = SimulacaoRequest.builder()
+                .cpf(cpf)
+                .email(email)
+                .valorEmprestimo(valorEmprestimo)
+                .dataNascimento(dataNascimento)
+                .qtdParcelas(qtdParcelas)
+                .build();
+
+        var simulacao = simulacaoCreditoService.gerarSimulacao(dadosSimulacao);
+        return ResponseEntity.ok(simulacao);    }
+
+    @Override
+    public ResponseEntity<List<SimulacaoEmprestimoResponse>> getSimulacoesClientes(String cpf) {
+        var simulacoesClientes = simulacaoClienteService.listarSimulacoes(cpf);
+
+        return ResponseEntity.ok(simulacoesClientes);
     }
+
 }
